Add a basic form for the users input.

--- a/style.css
+++ b/style.css
@@ -16,3 +16,9 @@ th, td {
     border: 1px solid black;
 }
 
+form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 20vw;
+}
