--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@
     margin: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
     font-size: 16px;
+    font-family: 'Roboto';
 }
 
 body {
     padding: 20px;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
-    background-color: black; 
+    background-color: #0c0a09; 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,13 +23,14 @@ body {
 }
 
 table {
-    border: 2px solid white;
+    border: none;
     color: white;
     width: 50vw;
 }
 
 h1 {
     color: white;
+    margin-bottom: 10px;
 }
 
 th, td {
@@ -37,7 +41,7 @@ form {
     margin-top: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    gap: 5px 10px;
     width: 50vw;
     color: white;
     font-size: 0.8rem;
@@ -47,7 +51,7 @@ fieldset {
     border: none;
 }
 
-.radio_container {
+.radio_container, .radio_options_container {
     display: flex;
     column-gap: 10px;
 }
@@ -62,4 +66,29 @@ fieldset {
 input {
     flex-grow: 1;
     min-width: 10px;
+}
+
+.submit_button {
+    margin-top: 15px;
+    padding: 5px 20px;
+    background-color: #44403c;
+    color: white;
+    border: none;
+    font-family: 'Roboto';
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.delete_button {
+    width: 20px;
+    height: 20px;
+    filter: brightness(0) invert(1);
+    cursor: pointer;
+}
+
+.delete_td {
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
