--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ form {
     margin-top: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 5px 10px;
+    gap: 10px 10px;
     width: 50vw;
     color: white;
     font-size: 0.8rem;
@@ -72,6 +72,10 @@ fieldset {
     height: 100%;
 }
 
+.radio_options_container {
+    padding-left: 3px;
+}
+
 .radio_options_container > div {
     display: flex;
     align-items: center;
@@ -79,10 +83,15 @@ fieldset {
 }
 
 .input_container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+}
+
+.author_container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
     column-gap: 10px;
 }
 
