--- a/style.css
+++ b/style.css
@@ -53,10 +53,11 @@ th, td {
 
 form {
     margin-top: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 0.5fr;
-    column-gap: 20px;
-    width: 50vw;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 10px;
+    width: 40vw;
     color: white;
     font-size: 0.8rem;
 }
